Fix tab panel child layout spacing

--- a/app/stylesheet/ddf_override.scss
+++ b/app/stylesheet/ddf_override.scss
@@ -4,6 +4,11 @@ form .miq-validation-button, .miq-async-action-button {
   display: flex;
   align-items: center;
 }
+// Override margin-bottom from carbon-component-mapper tabs component
+[class*="tab-"] > .miq-validation-button:not(:last-child),
+[class*="tab-"] > .cds--fieldset:not(:last-child) {
+  margin-bottom: 0;
+}
 #code-section {
   .cds--form-item {
     margin-bottom: 15px;
